<resources>
    <string name="app_name">cwierkaczApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="button_apply">Apply</string>
    <string name="button_signout">Sign out</string>
    <string name="text_signup">No account? Go to Signup</string>
    <string name="hint_tweet_text">What\'s up</string>
    <string name="text_login">Already have a account? Go to Login</string>
    <string name="hint_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>